<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".FragmentLayout.PlanningFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical"
        android:layout_margin="6dp"
        android:background="@color/boxedBackground">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SOS"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"/>

            <Button
                style="@style/AssistanceSOSButtons"
                android:text="@string/assistance_package_handling"/>

            <Button
                style="@style/AssistanceSOSButtons"
                android:text="@string/assistance_technical"/>

            <Button
                style="@style/AssistanceSOSButtons"
                android:text="@string/assistance_broke_lost"/>

            <Button
                style="@style/AssistanceSOSButtons"
                android:text="@string/assistance_unavailable"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="6dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableTop="@drawable/ic_phone_in_talk_black_24dp"
                    android:text="@string/assistance_callus"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableTop="@drawable/ic_sms_black_24dp"
                    android:text="@string/assistance_textus"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</FrameLayout>
